# neoclima

./: README.md  pyproject.toml
neoclima/: __main__.py  commands_svc.py  main.py
tests/: test_main.py
