[tool.poetry]
name = "neoclima"
version = "0.0.2"
description = ""
authors = ["caiopeternela <caiopeternela.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
neoclima = "neoclima.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.1"
emoji = "^2.2.0"
tinydb = "^4.7.0"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.185"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.ruff]
line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
